# guipp

./: .gitignore  .gitmodules  .project_defines  .project_defines.cmd  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  Functions.cmake  LICENSE  README.md  build-emc.sh  build-qt.sh  build-qt5.sh  build-qt6.sh  build-shared.cmd  build-static.sh  build.cmd  build.sh  clean.cmd  clean.sh  default-qt.nix  default.nix  derivation-qt.nix  derivation.nix  emc_build.sh  emc_prepare.sh  emc_shell-sh  generate-clang.cmd  generate-clang.sh  generate-codelite.sh  generate-raspi.sh  generate.cmd  generate.osx.sh  generate.sh  generateTest.cmd  generate_big_shared.sh  generate_not_static.sh  generate_raspberry.sh  generate_shared.sh  generate_static.sh  (+39 more)
RedImage/: CMakeLists.txt  RedImage.cpp  background_worker.h  color_filter.cpp  color_filter.h  color_group.h  color_key.cpp  color_key.h  color_key_group.cpp  color_key_group.h  color_range_view.cpp  color_range_view.h  color_sets.cpp  color_sets.h  color_view.cpp  color_view.h  cvmat2pixmap.cpp  cvmat2pixmap.h  hsv_range.cpp  hsv_range.h  image_info.cpp  image_info.h  image_view.cpp  image_view.h  min_max_group.cpp  min_max_group.h  over_view.cpp  over_view.h  range.cpp  range.h  redimage_settings.cpp  redimage_settings.h  rgb_range.cpp  rgb_range.h  side_bar.cpp  side_bar.h  status_bar.cpp  status_bar.h  thumb_view.cpp  thumb_view.h
RedImage/xml/: Trollinger.2.xml  Trollinger.3.xml  Trollinger.xml  merlot.3.xml  merlot.4.xml  merlot.xml  mitos.4.xml  mitos.xml  redimage.xml  riesling.2.xml  riesling.3.xml  riesling.3.xml.old  riesling.3.xml.sav1  riesling.xml  riesling.xml.old
ShowBtrfs/: CMakeLists.txt  ShowBtrfs.cpp
TimeTracker/: CMakeLists.txt  TimeTracker.cpp  data.h  filter.h
base/: CMakeLists.txt  array_wrapper.h  array_wrapper.inl  bind_method.h  bits.cpp  bits.h  blocking_queue.h  command_line.cpp  command_line.h  dbgstream.h  log_level.h  logger.cpp  logger.h  logger.inl  ostreamfmt.h  redirect_stream.h  robbery.h  string_util.cpp  string_util.h  time_util.cpp  time_util.h  version.h.in
gui/: CMakeLists.txt  Config.cmake.in  Functions.cmake  SubConfig.cmake.in  Version.h.in  gui.cpp
gui/app/: CMakeLists.txt  app.cpp  app.h
gui/core/: CMakeLists.txt  Version.h.in  angle.cpp  angle.h  array_wrapper.h  array_wrapper.inl  bits.cpp  bits.h  blocking_queue.h  button_state.cpp  button_state.h  cocoadefs.h  color.cpp  color.h  context.cpp  context.h  context.inl  coordinate_system.h  core_fwd.h  dbgstream.h  event.cpp  event.h  event_container.cpp  event_container.h  event_container.inl  event_handler.h  grid.h  grid.inl  gui_types.cpp  gui_types.h  guidefs.cpp  guidefs.h  guidefs_cocoa.h  guidefs_js.cpp  guidefs_js.h  guidefs_qt.cpp  guidefs_qt.h  guidefs_sdl.cpp  guidefs_sdl.h  guidefs_win32.cpp  (+53 more)
gui/ctrl/: CMakeLists.txt  button.cpp  button.h  button.inl  button_pressed_frame.h  button_pressed_rot_frame.h  button_state.cpp  button_state.h  clipboard.cpp  clipboard.h  close_folder_icon.h  column_list.cpp  column_list.h  column_list.inl  control.cpp  control.h  date_time_header_line.h  date_time_header_line.inl  drop_down.cpp  drop_down.h  drop_down.inl  edit.cpp  edit.h  edit.inl  editbox.cpp  editbox.h  editbox.inl  file_icon.h  file_tree.cpp  file_tree.h  file_tree.inl  image.cpp  image.h  item_state.h  label.cpp  label.h  label.inl  list.cpp  list.h  list.inl  (+66 more)
gui/draw/: CMakeLists.txt  Version.h.in  arc_coords.cpp  arc_coords.h  bitmap.cpp  bitmap.h  bitmap.inl  bitmap_info.cpp  bitmap_info.h  bitmap_info.inl  bitmap_js.cpp  bitmap_qt.cpp  bitmap_sdl.cpp  bitmap_win32.cpp  bitmap_x11.cpp  brush.cpp  brush.h  clock.cpp  clock.h  converter.cpp  converter.h  converter.inl  datamap.cpp  datamap.h  datamap.inl  diagram.cpp  diagram.h  diagram.inl  draw_fwd.h  drawers.cpp  drawers.h  drawers.inl  drawers_js.cpp  drawers_qt.cpp  drawers_sdl.cpp  drawers_win32.cpp  drawers_x11.cpp  font.cpp  font.h  font_js.cpp  (+32 more)
gui/io/: CMakeLists.txt  pnm.cpp  pnm.h  pnm.inl  pnm_to_src.cpp  pnm_to_src.h  pnm_to_src.inl  wavelength_to_rgb.cpp  wavelength_to_rgb.h
gui/layout/: CMakeLists.txt  adaption_layout.h  adaption_layout.inl  attach_layout.cpp  attach_layout.h  attach_layout.inl  border_layout.h  border_layout.inl  dynamic_border_layout.h  dynamic_border_layout.inl  grid_layout.h  grid_layout.inl  layout.cpp  layout.h  layout.inl  layout_container.h  layout_container.inl  lineup_layout.h  lineup_layout.inl  split_layout.h  weighted_layout.h  weighted_layout.inl
gui/look/: CMakeLists.txt  button.cpp  button.h  button_state.cpp  button_state.h  control.cpp  control.h  drop_down.cpp  drop_down.h  edit.cpp  edit.h  label.cpp  label.h  menu.cpp  menu.h  progress_bar.cpp  progress_bar.h  scroll_bar.cpp  scroll_bar.h  slider.cpp  slider.h  table.cpp  table.h  table.inl  textbox.cpp  textbox.h  tree.cpp  tree.h
gui/sources/: gui_types.cpp  gui_types.h  window.cpp  (+5 more)
raspi/: CMakeLists.txt  camera.cpp  camera.h  core.cpp  core.h  encoder.cpp  encoder.h  logging.h  ostreamfmt.h
samples/: BorderTest.cpp  CMakeLists.txt  WindowTest.cpp  attach_all_layout.cpp  border_layout_app.cpp  covid19.cpp  diagrams.cpp  dialogs.cpp  dynamic_border_layout_app.cpp  editor.cpp  filemanager.cpp  hello_world.cpp  icons.cpp  list_app.cpp  look_and_feel.cpp  new_border_layout.cpp  one_child.cpp  pnm2src.cpp  scroll_view_app.cpp  split_view.cpp  split_view_app.cpp  table_app.cpp  tiles_app.cpp  tree_app.cpp  weighted_layout_app.cpp
test/: BorderTest.cpp  CMakeLists.txt  WindowTest.cpp  attach_all_layout.cpp  csv_test.cpp  datamap_test.cpp  diagram_test.cpp  dialogs.cpp  drawer_test.cpp  filemanager.cpp  frames_test.cpp  hello_world.cpp  icon_test.cpp  list_app.cpp  new_border_layout.cpp  pixmap_test.cpp  raspicam_test.cpp  spectrometer.cpp  stretch_test.cpp  tree_app.cpp
testlib/: CMakeLists.txt  image_test_lib.cpp  image_test_lib.h  testlib.cpp  testlib.h
tests/: CMakeLists.txt  csv_test.cpp  datamap_test.cpp  diagram_test.cpp  drawer_test.cpp  frames_test.cpp  icon_test.cpp  pixmap_test.cpp  stretch_test.cpp
tools/: CMakeLists.txt  pnm2src.cpp
(+401 files in other folders)
